--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-  <div class="container-fluid">
+<script src="/Script.java"></script>
+<div class="container-fluid">
        <div>
            <div class="row">
         <div class="span8">
