--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script src="/Script.java"></script>
+<script src="script.js" type="text/javascript"/>
 <div class="container-fluid">
        <div>
            <div class="row">
