--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<script src="script.js" type="text/javascript"></script>
 <div class="container-fluid">
        <div>
            <div class="row">
@@ -51,4 +50,6 @@
                 </form>
                 </div>
             </div>
+        <script src="script.js" type="text/JavaScript"></script>
         </div>
+
