--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+       <script src="script.js"></script>
        <div>
            <div class="row">
         <div class="span8">
@@ -50,6 +51,5 @@
                 </form>
                 </div>
             </div>
-        <script src="script.js" type="text/JavaScript"></script>
         </div>
 
