--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-       <script src="../script.js"></script>
+       <script src="script.js" type="text/javascript"></script>
        <div>
            <div class="row">
         <div class="span8">
