--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
+<html lang="ua-UA">
+<head>
+       <link rel="stylesheet" href="/bootstrap.min.css">
+       <script type="text/javascript" src="/script.js"></script>
+       <script type="text/javascript" src="/sha.js"></script>
+</head>
+
 <div class="container-fluid">
-       <script src="script.js" type="text/javascript"></script>
        <div>
            <div class="row">
         <div class="span8">
