--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ua-UA">
 <head>
-       <link rel="stylesheet" href="/bootstrap.min.css">
-       <script type="text/javascript" src="/script.js"></script>
-       <script type="text/javascript" src="/sha.js"></script>
+       <link rel="stylesheet" href="../bootstrap.min.css">
+       <script type="text/javascript" src="../script.js"></script>
+       <script type="text/javascript" src="../sha.js"></script>
 </head>
 
 <div class="container-fluid">
