--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="ua-UA">
 <head>
-       <link rel="stylesheet" href="../bootstrap.min.css">
-       <script type="text/javascript" src="../script.js"></script>
-       <script type="text/javascript" src="../sha.js"></script>
+       <link rel="stylesheet" href="../Google-Auth/bootstrap.min.css">
+       <script type="text/javascript" src="../Google-Auth/script.js"></script>
+       <script type="text/javascript" src="../Google-Auth/sha.js"></script>
 </head>
 
 <div class="container-fluid">
        <div>
            <div class="row">
         <div class="span8">
-          <h1 align="center">Google Authenticator 1.0.3</h1>
+          <h1 align="center">Google Authenticator 1.0.2</h1>
         </div>           
            </div>
             <div class="row">
