--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
        <script type="text/javascript" src="../Google-Auth/script.js"></script>
        <script type="text/javascript" src="../Google-Auth/sha.js"></script>
 </head>
-
+       
+<body onload="load();"> 
+   </body>
+       
 <div class="container-fluid">
        <div>
            <div class="row">
