--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<script src="/sha.js"></script>
+<script src="/main.js"></script>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+
 <div class="container-fluid">
   <div>
     <div class="row">
