--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
-<script src="/sha.js"></script>
-<script src="/main.js"></script>
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<!DOCTYPE html>
+<html lang="en">
 
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Netflix Open Source">
+    <meta name="title" content="Netflix Open Source">
+    <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2015.ico">
+    <title>Netflix Open Source Software Center</title>
+    <!-- Bootstrap core CSS -->
+    <link href="/bootstrap.min.css" rel="stylesheet">
+  </head>
+  
+<body>
 <div class="container-fluid">
   <div>
     <div class="row">
@@ -55,3 +68,9 @@
     </div>
   </div>
 </div>
+
+  
+<script src="/sha.js"></script>
+<script src="/main.js"></script>
+</body>
+</html>
