--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Netflix Open Source">
     <meta name="title" content="Netflix Open Source">
-    <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2015.ico">
+    <link rel="shortcut icon" href="/Sobeit.ico">
     <title>Netflix Open Source Software Center</title>
     <!-- Bootstrap core CSS -->
     <link href="/bootstrap.min.css" rel="stylesheet">
