--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="Netflix Open Source">
-    <meta name="title" content="Netflix Open Source">
-    <link rel="shortcut icon" href="/Sobeit.ico">
-    <title>Netflix Open Source Software Center</title>
+    <meta name="description" content="Google Authenticator">
+    <meta name="title" content="Google Authenticator">
+    <link rel="shortcut icon" href="/sobeit.ico">
+    <title>Google Authenticator</title>
     <!-- Bootstrap core CSS -->
     <link href="/bootstrap.min.css" rel="stylesheet">
   </head>
