--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Google Authenticator">
     <meta name="title" content="Google Authenticator">
-    <link rel="shortcut icon" href="/sobeit.ico">
+    <link rel="shortcut icon" href="/ico/sobeit.ico">
     <title>Google Authenticator</title>
     <!-- Bootstrap core CSS -->
-    <link href="/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
   </head>
   
 <body>
@@ -69,7 +69,7 @@
   </div>
 </div>
 
-<script src="/sha.js"></script>
-<script src="/main.js"></script>
+<script src="/js/sha.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
