--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Google Authenticator</title>
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/js/sha.js"></script>
+    <script src="/js/main.js"></script>
   </head>
   
 <body>
@@ -19,7 +21,7 @@
   <div>
     <div class="row">
       <div class="span8">
-        <h1 align="center">Google Authenticator</h1>
+        <h1 align="center">Google Authenticator v1.1</h1>
       </div>
     </div>
     <div class="row">
@@ -68,8 +70,5 @@
     </div>
   </div>
 </div>
-
-<script src="/js/sha.js"></script>
-<script src="/js/main.js"></script>
 </body>
 </html>
