--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="/ico/sobeit.ico">
     <title>Google Authenticator</title>
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://raw.githubusercontent.com/MECHA9IC/Google-Auth/master/css/bootstrap.min.css" rel="stylesheet">
     <script src="/js/sha.js"></script>
     <script src="/js/main.js"></script>
   </head>
