--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>Google Authenticator</title>
     <!-- Bootstrap core CSS -->
     <link href="https://raw.githubusercontent.com/MECHA9IC/Google-Auth/master/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/js/sha.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="https://raw.githubusercontent.com/MECHA9IC/Google-Auth/master/js/sha.js"></script>
+    <script src="https://raw.githubusercontent.com/MECHA9IC/Google-Auth/master/js/main.js"></script>
   </head>
   
 <body>
@@ -21,7 +21,7 @@
   <div>
     <div class="row">
       <div class="span8">
-        <h1 align="center">Google Authenticator v1.2</h1>
+        <h1 align="center">Google Authenticator v1.3</h1>
       </div>
     </div>
     <div class="row">
