--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Google Authenticator">
     <meta name="title" content="Google Authenticator">
-    <link rel="shortcut icon" href="/ico/sobeit.ico">
+    <link rel="shortcut icon" href="ico/sobeit.ico">
     <title>Google Authenticator</title>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
