--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
   </div>
 </div>
 </body>
-  
+ 
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="js/sha.js"></script>
 <script src="js/main.js"></script>
 </html>
