--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div>
     <div class="row">
       <div class="span8">
-        <h1 align="center">Google Authenticator v1.6</h1>
+        <h1 align="center">Google Authenticator v1.1</h1>
       </div>
     </div>
     <div class="row">
@@ -29,36 +29,36 @@
 
           <div class="clearfix">
             <label for="secret">Secret (base32)</label>
-            <div class="input"><input type="text" size="30" name="secret" id="secret" class="xlarge" value="JBSWY3DPEHPK3PXP" /></div>
+            <div class="input" align="center"><input type="text"  size="30" name="secret" id="secret" class="xlarge" value="JBSWY3DPEHPK3PXP" /></div>
           </div>
           <!-- /clearfix -->
-          <div class="clearfix">
+          <div class="clearfix" align="center">
             <label>Secret (hex)</label>
             <div class="input"><span class="label label-default" id="secretHex"></span>
               <span id='secretHexLength'></span></div>
           </div>
           <!-- /clearfix -->
-          <div class="clearfix">
+          <div class="clearfix" align="center">
             <label>QR Code</label>
             <div class="input"><img id="qrImg" src="" /></div>
           </div>
           <!-- /clearfix -->
-          <div class="clearfix">
+          <div class="clearfix" align="center">
             <label>Unix epoch div 30 (padded hex)</label>
             <div class="input"><span class="label label-default" id='epoch'></span></div>
           </div>
           <!-- /clearfix -->
-          <div class="clearfix">
+          <div class="clearfix" align="center">
             <label>HMAC(secret, time)</label>
             <div class="input" id='hmac'></div>
           </div>
           <!-- /clearfix -->
-          <div class="clearfix">
+          <div class="clearfix" align="center">
             <label>Password</label>
             <div class="input"><span class="label label-primary" id='otp'></span></div>
           </div>
           <!-- /clearfix -->
-          <div class="clearfix">
+          <div class="clearfix" align="center">
             <label>Updating in</label>
             <div class="input"><span id='updatingIn'></span></div>
           </div>
@@ -69,7 +69,7 @@
   </div>
 </div>
 </body>
- 
+
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="js/sha.js"></script>
 <script src="js/main.js"></script>
