--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <form>
         <fieldset> 
 
-          <div class="clearfix">
+          <div class="clearfix" align="center">
             <label for="secret">Secret (base32)</label>
             <div class="input" align="center"><input type="text"  size="30" name="secret" id="secret" class="xlarge" value="JBSWY3DPEHPK3PXP" /></div>
           </div>
