--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <div class="clearfix" align="center">
             <label for="secret">Secret (base32)</label>
-            <div class="input" align="center"><input type="text" style="text-align:center;" size="30" name="secret" id="secret" class="xlarge" value="JBSWY3DPEHPK3PXP" /></div>
+            <div class="input" align="center"><input type="text" style="text-align:center;" size="30" name="secret" id="secret" class="xlarge" /></div>
           </div>
           <!-- /clearfix -->
           <div class="clearfix" align="center">
